@@ -3,6 +3,10 @@ Changelog started November 4, 2008.
 
 SMF Wiki 0.1                                                                   ?
 ================================================================================
+April 2009
+--------------------------------------------------------------------------------
+ + Rewritten WikiParser (started in March)
+
 February 2009
 --------------------------------------------------------------------------------
  ! Wikiparser lost some raw sections
